--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
+		<version>1.5.21.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.aksad</groupId>
+	<groupId>com.eksad</groupId>
 	<artifactId>latihanspringmvc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>latihanspringmvc</name>
@@ -31,27 +31,23 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		 </dependency>
+		 
+		 <dependency>
+		 <groupId>org.springframework.boot</groupId> 
+		 <artifactId>spring-boot-starter-data-jpa </artifactId>
+		 </dependency>
+		 
+		  
+		 <dependency>
+		 <groupId>org.postgresql</groupId> 
+		 <artifactId>postgresql</artifactId>
+		 <scope> runtime </scope>
+		 
+		 </dependency>
+		 
 	</dependencies>
 
 	<build>
